<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>brover</name>
    <version>0.1.0</version>
    <description>A metapackage that launches all brover dependencies</description>
    <maintainer email="beschastnovigor@gmail.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>urdf</depend>
    <depend>xacro</depend>
    <depend>std_msgs</depend>
    <depend>controller_manager</depend>
    <depend>diff_drive_controller</depend>
    <depend>joint_state_broadcaster</depend>
    <depend>ros2_control</depend>
    <depend>controller_interface</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>cyphal_ros2_bridge</depend>
    <depend>radiolink</depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
